all java files, pom.xml, application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost/ticket-booking
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
+server.port=9095
+server.servlet.context-path=/api
