Fixed Mapper plugin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost/ticket-booking
+spring.datasource.url=jdbc:postgresql://localhost/ticketbooking-bus
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=9095
 server.servlet.context-path=/api
